test/spec_vectors/elem/ok/module_11.wat
(module (global i32 (i32.const 0)) (table 1 funcref) (elem (global.get 0) $f) (func $f))