test/spec_vectors/elem/fail/module_71.wat
(module (global (import "test" "global-i32") i32) (table 1 funcref) (elem (global.get 1)))